fetal:add bolg page with api intigration
